--- a/src/app/add-dish/add-dish.component.html
+++ b/src/app/add-dish/add-dish.component.html
@@ -32,7 +32,7 @@
 
 <div class="row small-up-3 large-up-3 bgDishes">
 
-	<h2 class="captionDishes">
+	<h2 class="captionDishes text-center">
 		<img src={{captionDishes}}>
 	</h2>
 	<div class="column conteinerDishes"
@@ -52,19 +52,6 @@
 				<p>Price: {{dish.price}}$</p>
 			</div>
 		</div>
-
-
-		<!-- <div class=" thumbnail dishBord">
-				<h5 class="nameDish text-center">{{dish.name}}</h5>
-				<p>
-					<img class="" src={{dish.imgURL}}>
-				</p>
-
-				<p>Price: {{dish.price}}$</p>
-				<hr class="noMargin">
-				<p>Date: {{dish.calendar1}} - {{dish.calendar2}}</p>
-
-			</div> -->
 
 	</div>
 </div>
