--- a/src/app/edit-dish-price/edit-dish-price.component.html
+++ b/src/app/edit-dish-price/edit-dish-price.component.html
@@ -1,1 +1,38 @@
+ <app-modal-window-price [selectDish]="chooseDish" (onChanged)="onChanged($event)"></app-modal-window-price>
 
+
+
+<div class="row small-up-3 large-up-3 dishes bgDishes">
+
+	<h2 class="captionDishes text-center">
+		<img src={{captionDishes}}>
+	</h2>
+	<div class="column conteinerDishes"
+		*ngFor="let dish of dishes">
+		<div class="card-user-container">
+			<div class="card-user-avatar">
+				<img src={{dish.imgURL}} alt="" class="user-image">
+			</div>
+			<div class="card-user-social">
+				<p>
+					<i class="fa fa-calendar"></i> {{dish.calendar1}} -
+					{{dish.calendar2}}
+				</p>
+			</div>
+			<div class="card-user-bio">
+				<h4 class="nameDish noMargin">{{dish.name}}</h4>
+				<p>Price: {{dish.price}}$</p>
+			</div>
+			 <div class="card-user-button">
+    			<div class="text-center">
+					<button type="button" class="btn btn-md btn-success"
+						data-toggle="modal" data-target="#myModal"
+						(click)="modalWindow(dish)">Update</button>
+					<button type="button" class="btn btn-md btn-danger"
+					(click)="delete(dish); $event.stopPropagation()">Delete</button>
+				</div>
+  			</div>
+		</div>
+
+	</div>
+</div>
