--- a/src/app/edit-dish/edit-dish.component.css
+++ b/src/app/edit-dish/edit-dish.component.css
@@ -1,51 +1,1 @@
-.dishes {
-	margin-top: 90px;
-	margin-bottom: 140px;
-}
-
-.nameDish::first-letter {
-	text-transform: capitalize;
-}
-
-div .small-4 {
-	margin-bottom: 60px;
-}
-
-h2 {
-	text-align: center;
-	text-transform: uppercase;
-	font-weight: bold;
-	margin-bottom: 40px;
-}
-
-h3{font-weight: bold;}
-
-img {
-	width: 300px;
-	height: 200px;
-}
-
-::-webkit-input-placeholder {
-	text-transform: uppercase;
-	color: black;
-}
-
-::-moz-placeholder {
-	text-transform: uppercase;
-	color: black;
-}
-
-:-moz-placeholder {
-	text-transform: uppercase;
-	color: black;
-}
-
-:-ms-input-placeholder {
-	text-transform: uppercase;
-	color: black;
-}
-
-.price {
-	margin-bottom: 10px;
-}
-span {font-weight: bold;}
+.card-user-button {margin-bottom: 20px;}
