--- a/src/app/edit-dish/edit-dish.component.html
+++ b/src/app/edit-dish/edit-dish.component.html
@@ -1,8 +1,44 @@
-<div class="grid-container fluid dishes">
-	<app-modal-window [dishName]="name" (onChanged)="onChanged($event)"></app-modal-window>
+<app-modal-window [dishName]="name" (onChanged)="onChanged($event)"></app-modal-window>
+
+
+
+<div class="row small-up-3 large-up-3 dishes bgDishes">
+
+	<h2 class="captionDishes text-center">
+		<img src={{captionDishes}}>
+	</h2>
+	<div class="column conteinerDishes"
+		*ngFor="let dish of dishes">
+		<div class="card-user-container">
+			<div class="card-user-avatar">
+				<img src={{dish.imgURL}} alt="" class="user-image">
+			</div>
+			<div class="card-user-social">
+				<p>
+					<i class="fa fa-calendar"></i> {{dish.calendar1}} -
+					{{dish.calendar2}}
+				</p>
+			</div>
+			<div class="card-user-bio">
+				<h4 class="nameDish noMargin">{{dish.name}}</h4>
+				<p>Price: {{dish.price}}$</p>
+			</div>
+			 <div class="card-user-button">
+    			<div class="text-center">
+					<button type="button" class="btn btn-md btn-success"
+						data-toggle="modal" data-target="#myModal"
+						(click)="modalWindow(dish)">Update</button>
+					<button type="button" class="btn btn-md btn-danger"
+					(click)="delete(dish); $event.stopPropagation()">Delete</button>
+				</div>
+  			</div>
+		</div>
+
+	</div>
 </div>
 
-<div id="dish" class="grid-container fluid dishes">
+
+<!-- <div id="dish" class="grid-container fluid dishes">
 	<h2>dishes</h2>
 	<div class=" grid-container fluid grid-x dishCenter">
 		<div class="cell small-4 text-center" *ngFor="let dish of dishes">
@@ -24,3 +60,4 @@
 		</div>
 	</div>
 </div>
+ -->
