Added modal-window-price without validation.

--- a/src/app/form-add-dish/form-add-dish.component.html
+++ b/src/app/form-add-dish/form-add-dish.component.html
@@ -4,12 +4,12 @@
 	<div class="form-icons">
 		<div class="row">
 			<div class="small-3 columns">
-				<label for="name" class="middle">Name</label>
+				<label class="middle">Name</label>
 			</div>
 			<div class="small-9 columns">
 				<div class="input-group">
 					<span class="input-group-label"> <i class="fa fa-coffee"></i>
-					</span> <input type="text" id="name" maxlength="10" class="input-group-field"
+					</span> <input type="text" maxlength="10" class="input-group-field"
 						formControlName="name" name="name" ngModel>
 				</div>
 				<div>
@@ -31,13 +31,13 @@
 
 		<div class="row">
 			<div class="small-3 columns">
-				<label for="url" class="middle">URL</label>
+				<label class="middle">URL</label>
 			</div>
 
 			<div class="small-9 columns">
 				<div class="input-group">
 					<span class="input-group-label"> <i class="fa fa-photo"></i>
-					</span> <input type="url" id="imgURL" required name="imgURL" ngModel
+					</span> <input type="url" required name="imgURL" ngModel
 						class="input-group-field" maxlength="200" formControlName="imgURL">
 				</div>
 
@@ -57,12 +57,12 @@
 
 		<div class="row">
 			<div class="small-3 columns">
-				<label for="price" class="middle">Price</label>
+				<label class="middle">Price</label>
 			</div>
 			<div class="small-9 columns">
 				<div class="input-group">
 					<span class="input-group-label"> <i class="fa fa-dollar"></i>
-					</span> <input type="number" id="price" required name="price" ngModel
+					</span> <input type="number" required name="price" ngModel
 						class="input-group-field" formControlName="price">
 				</div>
 
