--- a/src/app/edit-dish-price/edit-dish-price.component.html
+++ b/src/app/edit-dish-price/edit-dish-price.component.html
@@ -1,4 +1,4 @@
- <app-modal-window-price [selectDish]="chooseDish" (onChanged)="onChanged($event)"></app-modal-window-price>
+ <app-modal-window-price [selectDish]="chooseDish" (onChanged)="onChanged($event)"></app-modal-window-price> 
 
 
 
@@ -27,9 +27,7 @@
     			<div class="text-center">
 					<button type="button" class="btn btn-md btn-success"
 						data-toggle="modal" data-target="#myModal"
-						(click)="modalWindow(dish)">Update</button>
-					<button type="button" class="btn btn-md btn-danger"
-					(click)="delete(dish); $event.stopPropagation()">Delete</button>
+						(click)="modalWindowPrice(dish)">Update</button>
 				</div>
   			</div>
 		</div>
