--- a/src/app/modal-window-price/modal-window-price.component.html
+++ b/src/app/modal-window-price/modal-window-price.component.html
@@ -16,7 +16,7 @@
 						[(ngModel)]="selectDish.name"
 						maxlength="10" name="name" formControlName="name">
 						 
-						<input class="none" type="text" required name="id"
+						<input class="none" type="number" required name="id"
 						[(ngModel)]="selectDish.id"
 						formControlName="id"> 
 						
