--- a/src/app/modal-window/modal-window.component.html
+++ b/src/app/modal-window/modal-window.component.html
@@ -26,7 +26,7 @@
 						[(ngModel)]="dishName.imgURL" placeholder={{dishName.imgURL}}
 						formControlName="imgURL"> 
 						
-						<input class="none" type="text" required
+						<input class="none" type="number" required
 						name="id" [(ngModel)]="dishName.id" placeholder={{dishName.id}} formControlName="id">
 
 
