--- a/src/app/add-dish/add-dish.component.css
+++ b/src/app/add-dish/add-dish.component.css
@@ -2,7 +2,7 @@
 	text-transform: capitalize;
 	font-weight: bold;
 }
- .nameDish {
+ h3 .nameDish {
 	font-weight: bold;
 	color: rgb(49, 42, 39);
 }
@@ -68,3 +68,53 @@
 	color: white;
 	font-weight: bold;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.card-product-hover-title {
+  font-size: 1.4rem;
+  font-weight: bold;
+  
+  margin-bottom: 0.2rem;
+}
+
+.card-product-hover {
+  position: relative;
+  line-height: 1.2rem;
+  transition: all 0.35s ease;
+}
+
+.card-product-hover-details {
+  -webkit-flex: 1 0 auto;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  padding: 1rem;
+}
+
+.card-product-hover-details > :last-child {
+  margin-bottom: 0;
+}
+
+.card-product-hover-price {
+  margin: 0.5rem 0;
+  font-weight: 700;
+	color: rgb(49, 42, 39);
+  font-size: #1779ba;
+}
+
+.card-product-hover .imgDish {
+	height: 13rem;}
+	
+	.conteinerDishes:hover{filter: opacity(0.8);}
