--- a/src/app/edit-dish/edit-dish.component.html
+++ b/src/app/edit-dish/edit-dish.component.html
@@ -2,7 +2,38 @@
 
 
 
+
 <div class="row small-up-3 large-up-3 dishes bgDishes">
+
+	<div class="column conteinerDishes" *ngFor="let dish of dishes">
+		<div class="card card-product-hover">
+			<img class="imgDish" src={{dish.imgURL}} alt="picture of dish" /> <img
+				src={{fonDish}} alt="picture of logotip" />
+			<div class="card-product-hover-icons">
+				<button type="button" class="btn btn-md btn-success"
+					data-toggle="modal" data-target="#myModal"
+					(click)="modalWindow(dish)">Update</button>
+				<button type="button" class="btn btn-md btn-danger"
+					(click)="delete(dish); $event.stopPropagation()">Delete</button>
+			</div>
+			
+			<div class="card-product-hover-details">
+				<h3 class="card-product-hover-title text-center nameDish">
+					{{dish.name}} <span class="card-product-hover-price text-left">${{dish.price}}</span>
+				</h3>
+				<h5 class="text-center">
+					<i class="fa fa-calendar"></i> {{dish.calendar1}} -
+					{{dish.calendar2}}
+				</h5>
+			</div>
+		</div>
+
+	</div>
+
+</div>
+
+
+<!-- <div class="row small-up-3 large-up-3 dishes bgDishes">
 
 	<h2 class="captionDishes text-center">
 		<img src={{captionDishes}}>
@@ -34,30 +65,6 @@
   			</div>
 		</div>
 
-	</div>
-</div>
-
-
-<!-- <div id="dish" class="grid-container fluid dishes">
-	<h2>dishes</h2>
-	<div class=" grid-container fluid grid-x dishCenter">
-		<div class="cell small-4 text-center" *ngFor="let dish of dishes">
-
-			<img src={{dish.imgURL}} alt="image1" />
-			<div class="grid-x text-center">
-				<div class="small-6 cell text-center">
-					<h3 class="nameDish text-center">{{dish.name}}</h3>
-				</div>
-				<div class="small-6 cell text-center">{{dish.price}}$</div>
-			</div>
-			<div class="text-center">
-				<button type="button" class="btn btn-md btn-success"
-					data-toggle="modal" data-target="#myModal"
-					(click)="modalWindow(dish)">Update</button>
-				<button type="button" class="btn btn-md btn-danger"
-					(click)="delete(dish); $event.stopPropagation()">Delete</button>
-			</div>
-		</div>
 	</div>
 </div>
  -->
