--- a/src/app/modal-window/modal-window.component.css
+++ b/src/app/modal-window/modal-window.component.css
@@ -41,3 +41,4 @@ input:focus {
 
         input.ng-touched.ng-invalid {border:solid red 2px;}
         input.ng-touched.ng-valid {border:solid green 2px;}
+        .buttonSize { width:4.438rem; }
