--- a/src/app/modal-window/modal-window.component.html
+++ b/src/app/modal-window/modal-window.component.html
@@ -45,9 +45,9 @@
 
 
 					<div class="button-modal text-center">
-						<button type="submit" class="btn btn-md btn-success"
+						<button type="submit" class="btn btn-md btn-success buttonSize"
 							[disabled]="myFormModal.invalid" (click)="addName(f.value); f.value=''">Update</button>
-						<button class="btn btn-md btn-danger" type="button"
+						<button class="btn btn-md btn-danger buttonSize" type="button"
 							data-dismiss="modal" #closeBtn>Close</button>
 					</div>
 				</form>
