--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div class="top-bar">
-		<div class="top-bar-left">
+		<div class="top-bar-left hide-for-small-only">
 			<ul class="menu">
 				<li class="logo"><img src={{urlLogo}} alt="image1" /></li>
 			</ul>
