--- a/src/app/modal-window-price/modal-window-price.component.html
+++ b/src/app/modal-window-price/modal-window-price.component.html
@@ -74,10 +74,10 @@
 
 
 					<div class="button-modal text-center">
-						<button type="submit" class="btn btn-md btn-success"
+						<button type="submit" class="btn btn-md btn-success buttonSize"
 							(click)="addPrice(f.value); f.value=''"
 							[disabled]="myFormModalPrice.invalid">Update</button>
-						<button class="btn btn-md btn-danger" type="button"
+						<button class="btn btn-md btn-danger buttonSize" type="button"
 							data-dismiss="modal" #closeBtn>Close</button>
 					</div>
 				</form>
