--- a/src/app/form-add-dish/form-add-dish.component.css
+++ b/src/app/form-add-dish/form-add-dish.component.css
@@ -43,10 +43,10 @@ form .form-icons .fa {
 .button:hover,
 .button:focus{background-color: rgb(35,31,32);}
 
-.errMesseng{position: absolute; z-index: 10098 !important; font-size: 0.8rem; color: red; }
-.errMessengName {top: 12.78rem; right: 23.8rem;}
-.errMessengURL {top: 16.52rem; right: 26rem;}
-.errMessengPrice{top: 20.25rem; right: 29rem;}
+.errMesseng{position: absolute; z-index: 10098 !important; font-size: 0.9rem; color: red; }
+ .errMessengName {top: 12.76rem;}
+.errMessengURL {top: 16.48rem;}
+.errMessengPrice{top: 20.13rem;} 
 
 
 
